# skill_by_mj

./: .gitignore  composer.json  package-lock.json  test.py
app/Http/Controllers/: PageController.php  admin.php
app/Http/Controllers/Admin/: ContentController.php  DashboardController.php  MenuController.php  PageController.php  RouteController.php  SettingController.php  UserController.php
app/Http/Middleware/: AdminMiddleware.php
app/Models/: Content.php  CustomRoute.php  Menu.php  Page.php  Setting.php  User.php
app/Providers/: AppServiceProvider.php
codex-cli/: .gitignore  LICENSE  README.md  pyproject.toml
codex-cli/src/codex_cli/: __init__.py  cli.py  config.py  providers.py
config/: activitylog.php  permission.php
database/migrations/: 2024_01_01_000001_create_permission_tables.php  2024_01_01_000002_create_pages_table.php  2024_01_01_000003_create_menus_table.php  2024_01_01_000004_create_custom_routes_table.php  2024_01_01_000005_create_contents_table.php  2024_01_01_000006_create_settings_table.php  2024_01_01_000007_add_extra_columns_to_users_table.php
database/seeders/: DatabaseSeeder.php  PermissionSeeder.php  RoleSeeder.php  SettingSeeder.php  UserSeeder.php
resources/views/admin/: dashboard.blade.php
resources/views/admin/partials/: navigation.blade.php  sidebar.blade.php
resources/views/layouts/: admin.blade.php
routes/: web.php
